[project]
name = "langchain-lab"
version = "0.1.0"
description = "A sandbox repository for exploring LangChain components and LLM applications."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[anthropic,google-genai,mistralai,openai]>=1.3.11",
    "python-dotenv>=1.2.2",
]
