[project]
name = "langchain-lab"
version = "0.1.0"
description = "A sandbox repository for exploring LangChain components and LLM applications."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.4.2",
    "langchain[anthropic,google-genai,mistralai,openai]>=1.3.11",
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "wikipedia>=1.4.0",
]
